sumo/tests/dfrouter/detector_types/errors/detectors_output_false/options.dfrouter
--net-file=input_tri.net.xml --detector-files=input_tri.det.xml --detectors-output xxx/detectors_def.det.xml
